[gd_scene load_steps=7 format=3 uid="uid://cm0fkjg054koa"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_c503m"]
[ext_resource type="PackedScene" uid="uid://cb3fqvfhd0pl3" path="res://battle/battle.tscn" id="2_drghj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_odu6j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y41s8"]
albedo_color = Color(0.356863, 1, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_bjkej"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5cwns"]
radius = 2.0

[node name="EnemySphere" type="CharacterBody3D"]
script = ExtResource("1_c503m")

[node name="Battle" parent="." instance=ExtResource("2_drghj")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_odu6j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_overlay = SubResource("StandardMaterial3D_y41s8")
mesh = SubResource("SphereMesh_bjkej")

[node name="PlayerDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_5cwns")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5471)

[connection signal="leave_battle" from="Battle" to="." method="_on_battle_leave_battle"]
[connection signal="won_battle" from="Battle" to="." method="_on_battle_won_battle"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
